<resources>
    <string name="app_name">bookcrowded</string>

    <!-- COMMON STRING STR -->
    <string name="common_confirm">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_exit">종료</string>
    <string name="common_save">저장</string>
    <string name="common_me">나</string>
    <string name="common_opponent">상대</string>
    <string name="common_back">이전으로</string>

    <!-- user Info -->
    <string name="common_user_email">이메일</string>
    <string name="common_user_name">이름</string>
    <string name="common_user_passwd">비밀번호</string>
    <string name="common_user_birth">생년월일</string>

    <!-- item Info -->
    <string name="common_item_name">상품명</string>
    <string name="common_item_description">상품 설명</string>
    <string name="common_item_price">가격</string>
    <string name="common_item_upload">업데이트 날짜</string>
    <string name="common_item_seller">판매자</string>
    <string name="common_item_sold">판매 상태</string>
    <!-- COMMON STRING END -->


    <!-- SPLASH ACTIVITY STR -->
    <string name="splash_title">북적북적 마켓</string>
    <string name="splash_loading">로딩중</string>
    <!-- SPLASH ACTIVITY END -->


    <!-- REGISTER ACTIVITY STR -->
    <string name="register_email_hint">ex. aaa@naver.com</string>
    <string name="register_birth_hint">ex. 001122</string>
    <string name="register_duplicate_check">중복 확인</string>
    <string name="register_execute">가입하기</string>
    <!-- REGISTER ACTIVITY END -->


    <!-- LOGIN ACTIVITY STR -->
    <string name="login_email">이메일</string>
    <string name="login_email_hint">이메일을 입력하세요</string>
    <string name="login_passwd">비밀번호</string>
    <string name="login_passwd_hint">비밀번호를 입력하세요</string>
    <string name="login_execute">로그인</string>
    <!-- LOGIN ACTIVITY END -->


    <!-- DETAIL ACTIVITY STR -->
    <string name="detail_chat">채팅하기</string>
    <string name="detail_edit">수정하기</string>
    <string name="detail_delete">삭제하기</string>
    <!-- DETAIL ACTIVITY END -->


    <!-- SEARCH ACTIVITY STR -->
    <string name="search_title">아이템 목록</string>
    <string name="search_sold_list">판매 완료 상품</string>
    <string name="search_unsold_list">판매 안된 상품</string>
    <string name="search_show_all">전체 보기</string>
    <!-- SEARCH ACTIVITY END -->


    <!-- ENROLL/MODIFICATION ACTIVITY STR -->
    <string name="posting_title">내 물건 팔기</string>
    <string name="posting_addPhoto">사진 업로드</string>
    <string name="posting_title_hint">제목을 입력하세요</string>
    <string name="posting_price_hint">가격을 입력하세요</string>
    <string name="posting_description_hint">내용을 입력하세요</string>
    <string name="posting_sold">판매 완료</string>
    <string name="posting_enroll_execute">등록하기</string>
    <string name="posting_modification_execute">수정하기</string>
    <!-- ENROLL/MODIFICATION ACTIVITY END -->



    <!-- MY PAGE STR -->
    <string name="mypage_profile">Profile</string>
    <string name="mypage_name">나는 감자</string>
    <string name="mypage_email">123455@nvaer.com</string>
    <string name="mypage_sell">판매 목록</string>
    <string name="mypage_buy">구매 목록</string>
    <string name="mypage_chat">채팅 목록</string>
    <string name="mypage_test">이미지 업로드 테스트</string>
    <string name="mypage_quit">탈퇴하기</string>
    <string name="mypage_logout_execute">LOG OUT</string>
    <!-- MY PAGE END -->


    <!-- CHAT STR -->
    <string name="chat_item_title">명품 자바 프로그래밍</string>
    <string name="chat_item_price">10000원</string>
    <string name="chat_message">메세지 입력</string>
    <string name="chat_list_none">채팅이 없습니다.</string>
    <!-- CHAT END -->

    <!-- CHAT LEFT STR -->
    <string name="chat_left_message">메시지 내용이 여기에 표시됩니다</string>
    <string name="chat_left_time">시간</string>
    <!-- CHAT LEFT END -->

    <!-- CHAT LIST STR -->
    <string name="chatlist_title">판매글 제목</string>
    <!-- CHAT LIST END -->


    <!-- MAIN NAV STR -->
    <string name="main_title">메인</string>
    <string name="main_search">검색</string>
    <string name="main_love">찜</string>
    <string name="main_my">마이 페이지</string>
    <!-- MAIN NAV END -->
</resources>