<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="false"
        android:icon="@drawable/home"
        android:title="@string/main_title"
        app:showAsAction="always" />
<!--    android:icon="@drawable/ic_notifications_black_24dp"-->

    <item
        android:id="@+id/navigation_search"
        android:title="@string/main_search"
        app:showAsAction="always"/>
<!--    android:icon="@drawable/ic_home_black_24dp"-->

    <item
        android:id="@+id/navigation_love"
        android:icon="@drawable/like"
        android:title="@string/main_love"
        app:showAsAction="always" />
<!--    android:icon="@drawable/ic_home_black_24dp"-->

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/catalog"
        android:title="@string/main_my"
        app:showAsAction="always" />
    <!--    android:icon="@drawable/ic_home_black_24dp"-->

</menu>