<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bookcrowded.ui.home.HomeFragment"
        android:label="@string/main_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.bookcrowded.ui.search.SearchFragment"
        android:label="@string/main_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.example.bookcrowded.ui.my.MyFragment"
        android:label="@string/main_my"
        tools:layout="@layout/fragment_my" >

<!--        <action-->
<!--            android:id="@+id/action_navigation_on_demand_to_navigation_on_demand_detail"-->
<!--            app:destination="@id/navigation_on_demand_detail" />-->
<!--        <action-->
<!--            android:id="@+id/action_navigation_on_demand_to_navigation_watch_later"-->
<!--            app:destination="@id/navigation_watch_later" />-->
    </fragment>

</navigation>